<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="com.example.sagar.hallbook.MainActivity">

    <View
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"/>

    <View
        android:id="@+id/centerV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="#c62828"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tag1"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tag2"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tag_name_1"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/tag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tag_name_2"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/facebook"
        android:paddingLeft="10dp"
        android:layout_marginStart="40dp"
        android:text="@string/fblogin_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/facebook_btn_container"
        android:onClick="onLogin"/>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:drawableStart="@drawable/googleplus"
        android:paddingStart="10dp"
        android:text="@string/googleplogin_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/googlep_btn_container"
        android:onClick="onLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/signupBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:text="@string/signup_text"
        android:onClick="onSignup"/>



</RelativeLayout>
